# agent-maker

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: AGENT_STRUCTURE.md  API_REFERENCE.md  Bypassing Cloudflare Playwright Research 2026.md  Bypassing Cloudflare with Playwright 2026.md  CODEBASE_REPORT.md  SYSTEM_REPORT.md  V1_CLAUDE_JOBS_TEST_REPORT.md  agent_compiler_plan.md  compiled-agent-dev-guideline.md  dev_log_1-5.md  dev_log_1.md  dev_log_2.md  dev_log_3.md  dev_log_4.md  dev_log_5.md  dev_log_6.md  universal-agents-v2_plan.md
examples/: basic_chat.py  multi_agent_run.py  translation_job.py
scripts/: check_srt_quality.py  compile_kendo_book_translator.py  compile_kendo_cn_book_translator.py  compile_kendo_translator.py  compile_kendo_translator_claude.py  compile_pplx_research.py  probe_claude.py  probe_claude_upload.py  probe_gemini_login.py  probe_gemini_ui.py  probe_gemini_upload.py  test_claude_upload.py  test_gemini_auth.py  test_gemini_upload.py
src/universal_agents/: __init__.py
tests/: conftest.py
tests/integration/: capture_gemini_auth.py  debug_model_selector.py  debug_upload.py  diagnose_gemini_thinking.py  diagnose_headless.py  reauth.py  run_srt_translation.py  test_camoufox.py  test_claude_chat.py  test_gemini_live.py  test_gemini_srt_translation.py  test_headless_cf.py  test_openai_live.py  test_openrouter_live.py  test_turnstile_strategies.py  test_v1_claude_jobs_live.py
tests/unit/: test_agent_packager.py  test_agent_registry.py  test_auth_detector.py  test_base_api_agent.py  (+28 more)
(+54 files in other folders)
