[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-maker"
version = "2.0.0"
description = "Universal LLM Agent Maker — compile any agent through a make-like process"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "agent", "ai", "automation", "browser", "compiler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "playwright>=1.40",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
stealth = [
    "playwright-stealth>=1.0",
    "camoufox>=0.4",
]
pdf = [
    "PyMuPDF>=1.23",
]
dotenv = [
    "python-dotenv>=1.0",
]
all = [
    "playwright-stealth>=1.0",
    "camoufox>=0.4",
    "PyMuPDF>=1.23",
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
]

[project.scripts]
agent-make = "universal_agents.compiler.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/universal_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
